// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentToggle() good usage render supports negative numeric off or on values 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 1,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 2,
          "isRefined": true,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 1,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render supports negative numeric off or on values 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 1,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 2,
          "isRefined": true,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 1,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render understands cssClasses 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle test",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 2,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 3,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 2,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render when refined 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 3,
        "isRefined": true,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 3,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 2,
          "isRefined": true,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render when refined 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 3,
        "isRefined": true,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 3,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 2,
          "isRefined": true,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render with facet values 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 2,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 3,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 2,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render with facet values 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": 2,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 3,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": 2,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={false}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render without facet values 1`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": null,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 0,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": null,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={true}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;

exports[`currentToggle() good usage render without facet values 2`] = `
<HeaderFooter-AutoHide
  collapsible={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "active": "ais-toggle--item__active",
      "body": "ais-toggle--body",
      "checkbox": "ais-toggle--checkbox",
      "count": "ais-toggle--count",
      "footer": "ais-toggle--footer",
      "header": "ais-toggle--header",
      "item": "ais-toggle--item",
      "label": "ais-toggle--label",
      "list": "ais-toggle--list",
      "root": "ais-toggle",
    }
  }
  facetValues={
    Array [
      Object {
        "count": null,
        "isRefined": false,
        "name": "Hello, ",
        "offFacetValue": Object {
          "count": 0,
          "isRefined": false,
          "name": "Hello, ",
        },
        "onFacetValue": Object {
          "count": null,
          "isRefined": false,
          "name": "Hello, ",
        },
      },
    ]
  }
  shouldAutoHideContainer={true}
  templateProps={
    Object {
      "templates": Object {
        "footer": "",
        "header": "",
        "item": "<label class=\\"{{cssClasses.label}}\\">
  <input type=\\"checkbox\\" class=\\"{{cssClasses.checkbox}}\\" value=\\"{{name}}\\" {{#isRefined}}checked{{/isRefined}} />{{name}}
  <span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span>
</label>",
      },
      "templatesConfig": undefined,
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "footer": false,
        "header": false,
        "item": false,
      },
    }
  }
  toggleFacetRefinement={[Function]}
/>
`;
